# jarvis-chat

./: .env.example  .gitignore  LICENSE  README.md  benchmark_phase1.py  conftest.py  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
src/chat_agent/: __init__.py  agent.py  agent_builder.py  agent_config.py  cache_config.py  cache_key_builder.py  cache_metrics.py  config.py  context_cache.py  context_dtype.py  eviction_policy.py  guardrails.py  intent.py  langgraph_agent.py  llm_config.py  mcp_config.py  message_builder.py  models.py  music_handler.py  response_cache.py  router.py  spotify_helpers.py  system_prompt.md  tool_discovery.py  tools.py
src/chat_agent/agent_logic/: cache_handler.py  llm_handler.py  mixins.py  session_cleanup.py  tool_handler.py
src/chat_agent/context_cache/: __init__.py  models.py  session_cache.py
src/chat_agent/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
src/chat_agent/intent/: __init__.py  base.py  llm_recognizer.py  mappings.py  matcher.py  orchestrator.py  patterns.py  regex_recognizer.py
src/chat_agent/llm/: __init__.py  base.py  copilot.py  gemini.py  ollama.py  openai.py  registry.py
src/chat_agent/mcp/: __init__.py  cached_router.py  circuit_breaker.py  client.py  models.py  multi_endpoint_client.py  multi_endpoint_router.py  router.py  router_protocol.py  stdio_client.py
src/jarvis/: __init__.py
tests/: conftest.py  e2e_integration_test.py  test_basic.py  test_integration_circuit_breaker.py
(+79 files in other folders)
